--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha test/*.test.js"
   },
-  "author": "",
+  "author": "Himanahu Parkash",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
@@ -14,6 +14,8 @@
     "nodemon": "^1.14.11"
   },
   "devDependencies": {
-    "mocha": "^4.1.0"
+    "expect": "^1.20.2",
+    "mocha": "^4.1.0",
+    "supertest": "^3.0.0"
   }
 }
