--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Himanahu Parkash",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.9",
     "nodemon": "^1.14.11"
