--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "written in  javascript",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "mocha test/*.test.js"
+  },
+  "engines": {
+    "node": "6.7.2"
   },
   "author": "Himanahu Parkash",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.13.9",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
